--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@ body {
     margin: 0;
 }
 
-
 .loading-message {
     display: flex;
     justify-content: center;
@@ -18,7 +17,11 @@ body {
 }
 
 @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
         transform: translateY(0);
     }
     40% {
@@ -42,7 +45,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 80px;
+    /* padding-top: 80px */
     padding-bottom: 200px;
     background: #202020;
     min-height: 100vh;
@@ -62,16 +65,11 @@ body {
     align-items: center;
 }
 
-
 .comment,
 .add-form {
     width: 596px;
     box-sizing: border-box;
-    background: radial-gradient(
-        75.42% 75.42% at 50% 42.37%,
-        rgba(53, 53, 53, 0) 22.92%,
-        #7334ea 100%
-    );
+    background: radial-gradient(75.42% 75.42% at 50% 42.37%, rgba(53, 53, 53, 0) 22.92%, #7334ea 100%);
     filter: drop-shadow(0px 20px 67px rgba(0, 0, 0, 0.08));
     border-radius: 20px;
 }
@@ -94,7 +92,8 @@ body {
 
 .comment-footer {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .comment-body {
@@ -153,12 +152,12 @@ body {
 .add-form {
     padding: 20px;
     margin-top: 48px;
-    display: flex;
     flex-direction: column;
 }
 
 .add-form-name,
-.add-form-text {
+.add-form-text,
+.input-form {
     font-size: 16px;
     font-family: Helvetica;
     border-radius: 8px;
@@ -185,7 +184,8 @@ body {
     justify-content: flex-end;
 }
 
-.add-form-button {
+.add-form-button,
+.button {
     margin-top: 24px;
     font-size: 24px;
     padding: 10px 20px;
@@ -195,6 +195,68 @@ body {
     cursor: pointer;
 }
 
+.button {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 100%;
+    height: 40px;
+}
+.button:hover {
+    opacity: 0.9;
+}
+
+.del-comment {
+    width: 20%;
+    
+}
+
 .add-form-button:hover {
     opacity: 0.9;
+}
+.auth {
+    padding-left: 15px;
+    padding-right: 15px;
+    gap: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 596px;
+    height: 120px;
+    box-sizing: border-box;
+    background: radial-gradient(75.42% 75.42% at 50% 42.37%, rgba(53, 53, 53, 0) 22.92%, #7334ea 100%);
+    filter: drop-shadow(0px 20px 67px rgba(0, 0, 0, 0.08));
+    border-radius: 20px;
+    margin-bottom: 48px;
+    margin-top: 48px;
+}
+.input-form {
+    text-align: center;
+    font-size: 12px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 100%;
+    height: 40px;
+}
+#clear-data {
+    z-index: 9999;
+    position: fixed;
+    right: 0;
+    background: url(../src/free-icon-dustbin-2415032.png);
+    width: 50px;
+    height: 50px;
+    background-size: contain;
+    cursor: pointer;
+}
+#clear-data:hover {
+    opacity: 0.5;
+}
+
+.window-input {
+    display: flex;
 }
