--- a/css/styles.css
+++ b/css/styles.css
@@ -203,17 +203,16 @@ body {
     font-size: 20px;
     margin-top: 30px;
     margin-bottom: 30px;
-    width: 100%;
+    /* width: 30%; */
     height: 40px;
 }
 .button:hover {
     opacity: 0.9;
 }
 
-.del-comment {
+/* .del-comment {
     width: 20%;
-    
-}
+} */
 
 .add-form-button:hover {
     opacity: 0.9;
@@ -259,4 +258,15 @@ body {
 
 .window-input {
     display: flex;
+}
+
+.auth__btn,
+.reg__btn {
+    display: flex;
+    width: 30%;
+}
+
+.exit__btn {
+    display: flex;
+    width: 30%;
 }
