--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,7 @@ body {
 .add-form-name,
 .add-form-text,
 .input-form {
+    
     font-size: 16px;
     font-family: Helvetica;
     border-radius: 8px;
@@ -233,6 +234,7 @@ body {
     border-radius: 20px;
     margin-bottom: 48px;
     margin-top: 48px;
+    transition: 1s;
 }
 .input-form {
     text-align: center;
